# elt-observability

./: README.md  config.py  config.yaml  models.py  pyproject.toml
alerting/: __init__.py  slack_alerter.py
collector/: __init__.py  airflow_collector.py  dbt_collector.py  redshift_collector.py
dashboards/: dashboard_generator.py  sla_dashboard.html
dbt_integration/analyses/: row_count_audit.sql
dbt_integration/macros/: observability_hooks.sql
detectors/: __init__.py  freshness_detector.py  row_count_drift.py  schema_drift.py  silent_failure_detector.py
storage/: __init__.py  metrics_store.py
tests/: test_alerting.py  test_collectors.py  test_detectors.py  test_storage.py
